web-infras/parser/tests/fixtures/self-added/let-as-identifier/strict-mode/let-as-arrow-expr-param/output.txt
[SyntaxError]: unexpect keyword in strict mode (2,12)
2|const a = (let) => {
 |          ^
[SyntaxError]: unexpect keyword in strict mode (2,12)
2|const a = (let) => {
 |          ^
[SyntaxError]: unexpect keyword in strict mode (2,12)
2|const a = (let) => {
 |          ^
